# notebooks

./: .gitignore  README.md  circles.ipynb  houses.ipynb  mnist.ipynb  pyproject.toml  regression.ipynb
