[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["zubairmh <zubair.mh@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.1"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
joblib = "^1.3.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
nbconvert = "^7.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
